--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,14 @@ dependencies:
   splashscreen:
   font_awesome_flutter: ^8.8.1
   url_launcher: ^5.5.0
+  auto_route: ^0.3.1
+  auto_route_generator: ^0.3.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: any
+  built_value_generator: any
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
