--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  splashscreen:
   font_awesome_flutter: ^8.8.1
   url_launcher: ^5.5.0
   auto_route: ^0.3.1
   auto_route_generator: ^0.3.2
+  convex_bottom_bar: ^2.4.0
 
 dev_dependencies:
   flutter_test:
