--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   url_launcher: ^5.5.0
   auto_route: ^0.3.1
   auto_route_generator: ^0.3.2
+  share: ^0.6.5+4
+
 
 dev_dependencies:
   flutter_test:
