--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   url_launcher: ^5.5.0
   auto_route: ^0.3.1
   auto_route_generator: ^0.3.2
+  fl_chart: ^0.3.0
 
 dev_dependencies:
   flutter_test:
